# ja2-stracciatella

./: .gitignore  CMakeLists.txt  appveyor.yml
.claude/: settings.local.json
.github/workflows/: coverity-scan.yml  github-ci.yml  mingw64.yml
dependencies/lib-sol2/: CMakeLists.txt
dependencies/lib-sol2/getter/: CMakeLists.txt.in
docs/: ARCHITECTURE.md
src/game/: SaveLoadScreen.cc
src/game/Editor/: EditorMapInfo.cc  Item_Statistics.cc
src/game/Strategic/: Assignments.cc  StrategicMap.cc  Strategic_Event_Handler.cc
src/game/Tactical/: Interface_Items.cc  LOS.cc  OppList.cc  Overhead.cc  Points.cc  TeamTurns.cc  Weapons.cc
src/game/TacticalAI/: NPC.cc
src/game/TileEngine/: Radar_Screen.cc
src/launcher/: CMakeLists.txt
src/sgp/: Types.h
